--- a/config.json
+++ b/config.json
@@ -1,17 +1,17 @@
 {
-  "displayTZ": "Asia/Hong_Kong",
+  "displayTZ": "America/New_York", 
   "thresholdHours": 24,
   "maxEventsPerDay": 3,
-  "isDisplayToScreen": false,
+  "isDisplayToScreen": true,
   "isShutdownOnComplete": false,
   "batteryDisplayMode": 1,
   "weekStartDay": 6,
   "dayOfWeekText": ["M", "T", "W", "T", "F", "S", "S"],
-  "screenWidth": 1304,
-  "screenHeight": 984,
-  "imageWidth": 984,
-  "imageHeight": 1304,
-  "rotateAngle": 270,
+  "screenWidth": 800, 
+  "screenHeight": 480,  
+  "imageWidth": 800,  
+  "imageHeight": 480,  
+  "rotateAngle": 0,
   "is24h": false,
   "calendars": [
     "primary"
